FACES-1898 Please consider these components: dialog, outputTooltip, and popover

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -3,6 +3,7 @@ alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,Co
 alloy_dataTable=general:dataTable.xhtml,DataTableModelBean.java,DataTableBackingBean.java
 alloy_field=general:field.xhtml|message-styling:field.xhtml,FieldBackingBean.java
 alloy_fieldset=general:fieldset.xhtml
+alloy_dialog=general:dialog.xhtml,DialogModelBean.java,DialogBackingBean.java
 alloy_icon=general:icon.xhtml
 alloy_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inputDate.xhtml,InputDateModelBean.java|date-pattern:inputDate.xhtml,InputDateModelBean.java|localization:inputDate.xhtml,InputDateModelBean.java|min-max-date:inputDate.xhtml,InputDateModelBean.java|multiple-panes:inputDate.xhtml,InputDateModelBean.java
 alloy_inputSourceCode=general:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java|default-value:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java
@@ -12,9 +13,11 @@ alloy_message=general:message.xhtml,MessageBackingBean.java
 alloy_messages=general:messages.xhtml,MessageBackingBean.java
 alloy_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
 alloy_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
+alloy_outputTooltip=general:outputTooltip.xhtml
 alloy_panelGrid=general:panelGrid.xhtml
 alloy_panelGroup=general:panelGroup.xhtml
 alloy_pickDate=general:pickDate.xhtml,PickDateModelBean.java|instant-ajax:pickDate.xhtml,PickDateModelBean.java|date-pattern:pickDate.xhtml,PickDateModelBean.java|localization:pickDate.xhtml,PickDateModelBean.java|min-max-date:pickDate.xhtml,PickDateModelBean.java|multiple-panes:pickDate.xhtml,PickDateModelBean.java|multiple-selection:pickDate.xhtml,PickDateModelBean.java
+alloy_popover=general:popover.xhtml,PopoverModelBean.java,PopoverBackingBean.java
 alloy_row=general:row.xhtml|column-width:row.xhtml|column-offset:row.xhtml
 alloy_selectOneRadio=general:selectOneRadio.xhtml,SelectOneRadioModelBean.java,SelectOneRadioBackingBean.java|conversion:selectOneRadio.xhtml,SelectOneRadioModelBean.java,SelectOneRadioBackingBean.java|data-model:selectOneRadio.xhtml,SelectOneRadioModelBean.java,SelectOneRadioBackingBean.java|default-value:selectOneRadio.xhtml,SelectOneRadioModelBean.java,SelectOneRadioBackingBean.java|instant-ajax:selectOneRadio.xhtml,SelectOneRadioModelBean.java|immediate:selectOneRadio.xhtml,SelectOneRadioModelBean.java,SelectOneRadioBackingBean.java|vertical-layout:selectOneRadio.xhtml,SelectOneRadioModelBean.java,SelectOneRadioBackingBean.java
 alloy_selectStarRating=general:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|data-model:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|default-value:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|instant-ajax:selectStarRating.xhtml,SelectStarRatingModelBean.java
