--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -21,6 +21,10 @@ alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
+alloy-dialog=[javadoc:com.liferay.faces.alloy.component.dialog.Dialog] is a [javadoc:javax.faces.component.UIPanel] that renders a div for use by the user. It is used in conjunction with a trigger, such as a button. The user may use the trigger to show the dialog. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of an [vdldoc:h:panelGroup] that does not render a span.
+alloy-dialog-general=There are two basic ways to render a dialog.
+alloy-dialog-general-example-1=Using the [vdldoc:alloy:dialog:for] attribute
+alloy-dialog-general-example-2=Using a [vdldoc:alloy:popover:clientKey] and Javascript
 alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-field-general=A *label* can be specified via the [vdldoc:alloy:field:label] attribute. In addition, the [vdldoc:alloy:field:id] attribute is typically referenced by the [vdldoc:f:ajax] tag in order to re-render an input field and a corresponding message.
 alloy-field-general-example-1=Re-rendering [vdldoc:alloy:field] via [vdldoc:f:ajax].
@@ -100,6 +104,8 @@ alloy-pickdate-multiple-panes=The number of month *panes* that are displayed can
 alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include `single` (the default), `multiple,` or `multiple-sticky`. The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
+alloy-popover=[javadoc:com.liferay.faces.alloy.component.popover.Popover] is a [javadoc:javax.faces.component.UIPanel] that renders a div for use by the user. It is used in conjunction with a trigger, such as a button. The user may toggle the trigger to control whether the popover is visible. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of an [vdldoc:h:panelGroup] that does not render a span.
+alloy-popover-general=Use the [vdldoc:alloy:popover:for] attribute
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
 alloy-row-general=The component takes [vdldoc:alloy:column] tags as children in order to layout components in a tabular grid.
 alloy-row-column-width=The *width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:width] attribute.
@@ -127,6 +133,11 @@ alloy-selectthumbrating-instant-ajax=The component supports *instant Ajax* by si
 alloy-tabview=[javadoc:com.liferay.faces.alloy.component.TabView] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders tabs either statically or dynamically.
 alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.
 alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+alloy-outputtooltip=[javadoc:com.liferay.faces.alloy.component.outputtooltip.OutputTooltip] is a [javadoc:javax.faces.component.UIOutput] that renders a div for use as a hint to the user. It is used in conjunction with a cursor, usually a pointer. The user hovers the pointer over an item, without clicking it, and a tooltip appears as a "hover box" with information about the item. Since it extends [javadoc:javax.faces.component.html.HtmlOutputText], it supports all the features of an [vdldoc:h:outputText] that renders a div and children instead of just a span.
+alloy-outputtooltip-general=There are three basic ways to use [vdldoc:alloy:outputTooltip]
+alloy-outputtooltip-general-example-1=Using the [vdldoc:alloy:outputTooltip:value] attribute
+alloy-outputtooltip-general-example-2=Using the button's [vdldoc:alloy:outputTooltip:title] attribute (with optional [vdldoc:alloy:outputTooltip:styleClass])
+alloy-outputtooltip-general-example-3=Toolip's containing children, (with optional [vdldoc:alloy:outputTooltip:headerText] attribute)
 back-to-navigation-with=Back to Navigation with
 birthday=Birthday
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
