FACES-1898 Develop alloy:dialog, alloy:outputTooltip, and alloy:popover components FACES-1714 Develop Liferay Faces Showcase (added use cases for alloy:dialog, alloy:outputTooltip, and alloy:popover)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -21,6 +21,10 @@ alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
+alloy-dialog=[javadoc:com.liferay.faces.alloy.component.dialog.Dialog] is a [javadoc:javax.faces.component.UIPanel] component that that renders a `&lt;div&gt;` element that is initially styled with `display:none` so that it can be popped-up as an *overlay*. It can contain children and also features an *optional header* via the [vdldoc:alloy:dialog:headerText] attribute. When [vdldoc:alloy:dialog:modal]=`true` the user will be forced to interact with or dismiss the dialog in order to return to the main application. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
+alloy-dialog-general=There are two basic ways to popup the dialog: By specifying a trigger (like an [vdldoc:alloy:button] via the [vdldoc:alloy:dialog:for] attribute) or by executing the `show()` JavaScript function. The dialog can be popped-down either by clicking the X icon in the upper right hand corner, or by executing the `hide()` JavaScript function.
+alloy-dialog-general-example-1=Specifying the [vdldoc:alloy:dialog:for] attribute
+alloy-dialog-general-example-2=Specifying a [vdldoc:alloy:dialog:clientKey] and Javascript
 alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-field-general=A *label* can be specified via the [vdldoc:alloy:field:label] attribute. In addition, the [vdldoc:alloy:field:id] attribute is typically referenced by the [vdldoc:f:ajax] tag in order to re-render an input field and a corresponding message.
 alloy-field-general-example-1=Re-rendering [vdldoc:alloy:field] via [vdldoc:f:ajax].
@@ -32,7 +36,7 @@ alloy-fieldset=[javadoc:com.liferay.faces.alloy.component.fieldset.Fieldset] is 
 alloy-fieldset-general=A *header* for the component can be specified via the [vdldoc:alloy:fieldset:legend] attribute.
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
-alloy-input-date-benefits-description=since it combines date selection, text input, and automatic [javadoc:java.util.Date] conversion in a single component. The only advantage of using [vdldoc:alloy:pickDate] is that it can be associated with an [vdldoc:alloy:inputTextarea] in order to select *multiple dates*.
+alloy-input-date-benefits-description=since it combines date selection, text input, and automatic [javadoc:java.util.Date] conversion in a single component. The only advantage of using [vdldoc:alloy:pickDate] is that it can be *associated* with an [vdldoc:alloy:inputTextarea] in order to select *multiple dates*.
 alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the calendar.
@@ -63,7 +67,7 @@ alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputT
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
 alloy-message=[javadoc:com.liferay.faces.alloy.component.message.Message] is a [javadoc:javax.faces.component.UIMessage] component that renders a `&lt;span&gt;` element containing the text of a single [javadoc:javax.faces.application.FacesMessage] for an associated component. Since it extends [javadoc:javax.faces.component.html.HtmlMessage], it supports all the features of [vdldoc:h:message].
-alloy-message-general=The component can be associated with an input component like [vdldoc:alloy:inputText] via the [vdldoc:alloy:message:for] attribute. If it is a child of [vdldoc:alloy:field] then it will be *automatically styled* when validation fails.
+alloy-message-general=The component can be *associated* with an input component like [vdldoc:alloy:inputText] via the [vdldoc:alloy:message:for] attribute. If it is a child of [vdldoc:alloy:field] then it will be *automatically styled* when validation fails.
 alloy-message-general-example-1=Re-rendering [vdldoc:alloy:message] via [vdldoc:f:ajax]
 alloy-messages=[javadoc:com.liferay.faces.alloy.component.message.Messages] is a [javadoc:javax.faces.component.UIMessages] component that renders the text of one or more [javadoc:javax.faces.application.FacesMessage] instances inside a `&lt;ul&gt;` element or `&lt;table&gt;` element for an associated component, according to the [vdldoc:alloy:messages:layout] attribute. Since it extends [javadoc:javax.faces.component.html.HtmlMessage], it supports all the features of [vdldoc:h:message].
 alloy-messages-general=The component is typically placed inside an [vdldoc:alloy:form] in order to render messages within the context of a form.
@@ -82,6 +86,11 @@ alloy-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputTex
 alloy-outputtext-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
 alloy-outputtext-conversion=The [vdldoc:alloy:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] type of child tag.
 alloy-outputtext-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:alloy:outputText:dir] and [vdldoc:alloy:outputText:lang] attributes.
+alloy-outputtooltip=[javadoc:com.liferay.faces.alloy.component.outputtooltip.OutputTooltip] is a [javadoc:javax.faces.component.UIOutput] component that renders a `&lt;div&gt;` element which is displayed as an *overlay*. Since it extends [javadoc:javax.faces.component.html.HtmlOutputText], it supports all the features of [vdldoc:h:outputText].
+alloy-outputtooltip-general=The component *must* be *associated* with another component (such as [vdldoc:alloy:button], [vdldoc:alloy:inputText], or [vdldoc:alloy:outputText]) via the [vdldoc:alloy:outputTooltip:for] attribute, so that the tooltip can be displayed nearby. The text of the tooltip can be specified via the [vdldoc:alloy:outputTooltip:value] attribute or by relying on the `title` attribute of the associated component. It can be styled by setting the [vdldoc:alloy:outputTooltip:styleClass] attribute to `tooltip` (the default) or `tooltip-help`.
+alloy-outputtooltip-general-example-1=Specifying tooltip text via the [vdldoc:alloy:outputTooltip:value] attribute
+alloy-outputtooltip-general-example-2=Specifying tooltip text via the associated component's `title` attribute
+alloy-outputtooltip-general-example-3=Specifying children, [vdldoc:alloy:outputTooltip:headerText], [vdldoc:alloy:outputTooltip:opacity]=`0.5`, and [vdldoc:alloy:outputTooltip:styleClass]=`tooltip-help`
 alloy-panelgrid=[javadoc:com.liferay.faces.alloy.component.panelgrid.PanelGrid] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;table&gt;` element to layout its children in a tabular grid. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGrid], it supports all the features of [vdldoc:h:panelGrid].
 alloy-panelgrid-general=The [vdldoc:alloy:panelGrid:columns] attribute specifies how many table columns are rendered. A new table row will be rendered if the number of children exceeds the number of columns.
 alloy-panelgroup=[javadoc:com.liferay.faces.alloy.component.panelgroup.PanelGroup] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;span&gt;` or a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
@@ -100,6 +109,8 @@ alloy-pickdate-multiple-panes=The number of month *panes* that are displayed can
 alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include `single` (the default), `multiple,` or `multiple-sticky`. The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
+alloy-popover=[javadoc:com.liferay.faces.alloy.component.popover.Popover] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element which is automatically popped-up as an *overlay*. It can contain children and also features an *optional header* via the [vdldoc:alloy:dialog:headerText] attribute. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
+alloy-popover-general=The component is associated with a trigger (like an [vdldoc:alloy:button]) via the [vdldoc:alloy:dialog:for] attribute. The popover can be popped-down either by clicking the X icon in the upper right hand corner, or by executing the `hide()` JavaScript function.
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
 alloy-row-general=The component takes [vdldoc:alloy:column] tags as children in order to layout components in a tabular grid.
 alloy-row-column-width=The *width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:width] attribute.
@@ -132,6 +143,7 @@ birthday=Birthday
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
+cancel=Cancel
 column-width=Column Width
 column-offset=Column Offset
 component=Component
@@ -155,8 +167,9 @@ favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
 first-name=First Name
-hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 general=General
+header-text=Header Text
+hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 immediate=Immediate
 info=Info
 instant-ajax=Instant Ajax
@@ -171,6 +184,7 @@ max-length-events=Max Length Events
 message-styling=Message Styling
 min-max-date=Min/Max Date
 mini=Mini
+modal=Modal
 model-value=Model Value
 multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
@@ -190,6 +204,7 @@ portlet-renderurl=[javadoc:com.liferay.faces.bridge.component.PortletRenderURL] 
 portlet-renderurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *render parameters* to the URL.
 portlet-resourceurl=[javadoc:com.liferay.faces.bridge.component.PortletResourceURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.ResourceURL] that invokes the RESOURCE_PHASE of the portlet lifecycle targeting the current portlet. 
 portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet resource parameters to the URL. The example below shows how to specify the *javax.faces.resource* and *ln* portlet *resource parameters* in order to get a URL that targets a JSF *image* resource.
+position-mouse-cursor-here=Position mouse cursor here
 primary=Primary
 rating=Rating
 rendered=Rendered
@@ -197,6 +212,8 @@ required=Required
 required-message=This is a required field
 right-to-left=Right-To-Left
 size=Size
+show=Show
+show-hide=Show/Hide
 small=Small
 source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
@@ -206,6 +223,8 @@ submit-and-re-render-form=Submit and Re-render Form
 submit-non-faces-postback=Submit Non-Faces Postback
 success=Success
 text-field=Text Field
+text-from-title-attribute=Text from title attribute
+text-from-value-attribute=Text from value attribute
 this-is-column-1=This is column 1 with width="33"
 this-is-column-2=This is column 2 with width="33"
 this-is-column-3=This is column 3 with width="33"
@@ -214,6 +233,7 @@ this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
 text-box-1=Text Box #1
 text-box-2=Text Box #2
 to-param-page=To Param page
+tooltip-value=Tooltip Value
 usage=Usage
 valid-date-range=Valid Date Range
 validating-an-email-address-using-validator-attribute=Validating an *email address* using the [vdldoc:alloy:inputTextarea:validator] attribute
