FACES-1898 Develop alloy:popover component (made it so that trigger only works when autoShow=false) FACES-1714 Develop Liferay Faces Showcase (clarified use-cases for alloy:dialog and alloy:popover)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -110,7 +110,9 @@ alloy-pickdate-multiple-selection=The *date selection mode* can be specified via
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
 alloy-popover=[javadoc:com.liferay.faces.alloy.component.popover.Popover] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element which is automatically popped-up as an *overlay*. It can contain children and also features an *optional header* via the [vdldoc:alloy:dialog:headerText] attribute. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
-alloy-popover-general=The component is associated with a trigger (like an [vdldoc:alloy:button]) via the [vdldoc:alloy:dialog:for] attribute. The popover can be popped-down either by clicking the X icon in the upper right hand corner, or by executing the `hide()` JavaScript function.
+alloy-popover-general=The component *must* be *associated* with another component (such as [vdldoc:alloy:button]) via the [vdldoc:alloy:popover:for] attribute, so that the popover can be displayed nearby. The popover can be popped-up by executing the `show()` JavaScript function and can be popped-down by executing the `hide()` JavaScript function.
+alloy-popover-general-example-1=Specifying [vdldoc:alloy:popover:autoShow]=`false` (the default) and [vdldoc:alloy:popover:position]=`top` (the default)
+alloy-popover-general-example-2=Specifying [vdldoc:alloy:popover:autoShow]=`true` and [vdldoc:alloy:popover:position]=`bottom`
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
 alloy-row-general=The component takes [vdldoc:alloy:column] tags as children in order to layout components in a tabular grid.
 alloy-row-column-width=The *width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:width] attribute.
@@ -144,6 +146,10 @@ bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
 cancel=Cancel
+click-here-to-hide-this-popover=Click here to hide this popover
+click-here-to-show-the-dialog=Click here to show the dialog
+clicking-here-shows-the-popover=Click here to shows the popover since autoShow="false"
+clicking-here-does-not-show-the-popover=Clicking here does not show the popover since autoShow="true"
 column-width=Column Width
 column-offset=Column Offset
 component=Component
@@ -212,8 +218,6 @@ required=Required
 required-message=This is a required field
 right-to-left=Right-To-Left
 size=Size
-show=Show
-show-hide=Show/Hide
 small=Small
 source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
