FACES-1949 Please consider this enhancement for popover

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -146,7 +146,7 @@ bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
 cancel=Cancel
-click-here-to-hide-this-popover=Click here to hide this popover
+click-the-x-in-the-header-to-hide-this-popover=Click the "x" in the header to hide this popover
 click-here-to-show-the-dialog=Click here to show the dialog
 clicking-here-shows-the-popover=Click here to shows the popover since autoShow="false"
 clicking-here-does-not-show-the-popover=Clicking here does not show the popover since autoShow="true"
