--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -22,7 +22,7 @@ alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap 
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
 alloy-dialog=[javadoc:com.liferay.faces.alloy.component.dialog.Dialog] is a [javadoc:javax.faces.component.UIPanel] component that that renders a `&lt;div&gt;` element that is initially styled with `display:none` so that it can be popped-up as an *overlay*. It can contain children and also features an *optional header* via the [vdldoc:alloy:dialog:headerText] attribute. When [vdldoc:alloy:dialog:modal]=`true` the user will be forced to interact with or dismiss the dialog in order to return to the main application. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
-alloy-dialog-general=There are two basic ways to popup the dialog: By specifying a trigger (like an [vdldoc:alloy:button] via the [vdldoc:alloy:dialog:for] attribute) or by executing the `show()` JavaScript function. The dialog can be popped-down either by clicking the X icon in the upper right hand corner, or by executing the `hide()` JavaScript function.
+alloy-dialog-general=The dialog can be popped-up by associateing it with a trigger (like an [vdldoc:alloy:button] via the [vdldoc:alloy:dialog:for] attribute).<br /><br />*JavaScript API:*<ul><li>`show()` causes the dialog to be visible</li><li>`hide()` causes the dialog to be invisible</li></ul>
 alloy-dialog-general-example-1=Specifying the [vdldoc:alloy:dialog:for] attribute
 alloy-dialog-general-example-2=Specifying a [vdldoc:alloy:dialog:clientKey] and Javascript
 alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
@@ -110,9 +110,10 @@ alloy-pickdate-multiple-selection=The *date selection mode* can be specified via
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
 alloy-popover=[javadoc:com.liferay.faces.alloy.component.popover.Popover] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element which is automatically popped-up as an *overlay*. It can contain children and also features an *optional header* via the [vdldoc:alloy:dialog:headerText] attribute. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
-alloy-popover-general=The component *must* be *associated* with another component (such as [vdldoc:alloy:button]) via the [vdldoc:alloy:popover:for] attribute, so that the popover can be displayed nearby. The popover can be popped-up by executing the `show()` JavaScript function and can be popped-down by executing the `hide()` JavaScript function.
-alloy-popover-general-example-1=Specifying [vdldoc:alloy:popover:autoShow]=`false` (the default) and [vdldoc:alloy:popover:position]=`top` (the default)
-alloy-popover-general-example-2=Specifying [vdldoc:alloy:popover:autoShow]=`true` and [vdldoc:alloy:popover:position]=`bottom`
+alloy-popover-general=The component *must* be *associated* with another component (such as [vdldoc:alloy:button]) via the [vdldoc:alloy:popover:for] attribute, so that the popover can be displayed nearby.<br /><br />*JavaScript API:*<ul><li>`show()` causes the popover to be visible</li><li>`hide()` causes the popover to be invisible</li><li>`toggle()` causes the popover visibility to be toggled</li></ul>
+alloy-popover-general-example-1=Automatically show popover and toggle visibility with a button
+alloy-popover-general-example-2=Show popover when text input receives focus and hide when focus is lost
+alloy-popover-general-example-3=Show popover when button is clicked and hide when form is submitted
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
 alloy-row-general=The component takes [vdldoc:alloy:column] tags as children in order to layout components in a tabular grid.
 alloy-row-column-width=The *width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:width] attribute.
@@ -146,10 +147,10 @@ bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
 cancel=Cancel
-click-here-to-hide-this-popover=Click here to hide this popover
+click-here-and-press-the-tab-key=Click here and press the TAB key
 click-here-to-show-the-dialog=Click here to show the dialog
-clicking-here-shows-the-popover=Click here to shows the popover since autoShow="false"
-clicking-here-does-not-show-the-popover=Clicking here does not show the popover since autoShow="true"
+click-here-to-show-the-popover=Click here to show the popover
+click-here-to-toggle-the-popover=Click here to toggle the popover
 column-width=Column Width
 column-offset=Column Offset
 component=Component
@@ -232,6 +233,7 @@ text-from-value-attribute=Text from value attribute
 this-is-column-1=This is column 1 with width="33"
 this-is-column-2=This is column 2 with width="33"
 this-is-column-3=This is column 3 with width="33"
+this-is-some-popover-text=This is some popover text
 this-text-is-inside-a-span-html-tag=This text is inside a <span> HTML tag
 this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
 text-box-1=Text Box #1
