FACES-1808 Develop alloy:selectBooleanCheckbox component FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:selectBooleanCheckbox)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,5 +1,6 @@
 actionlistener-execution-when-immediate-is-false=ActionListener execution when [vdldoc:alloy:commandButton:immediate] is `false` (the default)
 actionlistener-execution-when-immediate-is-true=ActionListener execution when [vdldoc:alloy:commandButton:immediate] is `true`
+agree=Agree
 are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
 alloy-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javadoc:javax.faces.component.UIOutput] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:button:type] is `button`. Since it extends [javadoc:javax.faces.component.html.HtmlOutcomeTargetButton], it supports all the features of [vdldoc:h:button]. The component does *not need to be a child* of `h:form` since the [vdldoc:alloy:button:outcome] attribute is designed to navigate via HTTP GET.
 alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:button:image] and [vdldoc:alloy:button:value] attributes can be specified for styling purposes.
@@ -118,6 +119,10 @@ alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:java
 alloy-row-general=The component takes [vdldoc:alloy:column] tags as children in order to layout components in a tabular grid.
 alloy-row-column-width=The *width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:width] attribute.
 alloy-row-column-offset=The *offset width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:offsetWidth] attribute.
+alloy-selectbooleancheckbox=[javadoc:com.liferay.faces.alloy.component.selectbooleancheckbox.SelectBooleanCheckbox] is a [javadoc:javax.faces.component.UISelectBoolean] component that renders a checkbox. Since it extends [javadoc:javax.faces.component.html.HtmlSelectBooleanCheckbox], it supports all the features of [vdldoc:h:selectBooleanCheckbox].
+alloy-selectbooleancheckbox-general=The [vdldoc:alloy:selectBooleanCheckbox:value] of the component *must* be of type `boolean` or [javadoc:java.lang.Boolean].
+alloy-selectbooleancheckbox-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
+alloy-selectbooleancheckbox-immediate=When the [vdldoc:alloy:selectBooleanCheckbox:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
 alloy-selectmanycheckbox=[javadoc:com.liferay.faces.alloy.component.selectmanycheckbox.SelectManyCheckbox] is a [javadoc:javax.faces.component.UISelectMany] component that renders checkboxes and enables the user to select multiple values. Since it extends [javadoc:javax.faces.component.html.HtmlSelectManyCheckbox], it supports all the features of [vdldoc:h:selectManyCheckbox] such as accepting [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 alloy-selectmanycheckbox-conversion=The [vdldoc:alloy:selectManyCheckbox:value] attribute can be *converted* by specifying an [vdldoc:f:converter] child tag.
 alloy-selectmanycheckbox-data-model=The component will display *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
@@ -196,7 +201,6 @@ conversion-to-a-date-using-f-convertdatetime=Conversion to a [javadoc:java.util.
 converter-message=Failed to convert this field
 country=Country
 customers=Customers
-danger=Danger
 data-model=Data Model
 date-of-birth=Date of Birth
 date-pattern=Date Pattern
@@ -214,6 +218,7 @@ general=General
 header-text=Header Text
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 immediate=Immediate
+i-agree-to-the-terms-of-the-license-agreement=I agree to the terms of the license agreement
 info=Info
 instant-ajax=Instant Ajax
 inverse=Inverse
