--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -51,6 +51,18 @@ alloy-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
 alloy-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:inputDate:minimumDate] and [vdldoc:alloy:inputDate:maximumDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
 alloy-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:inputDate:panes] attribute (maximum of 3).
+alloy-inputhidden=[javadoc:com.liferay.faces.alloy.component.inputhiddenarea.InputHidden] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML input element of type *hidden*. Since it extends [javadoc:javax.faces.component.html.HtmlInputHidden], it supports all the features of [vdldoc:h:inputHidden].
+alloy-inputhidden-validation=The [vdldoc:alloy:inputHidden:value] attribute can be *validated* via the [vdldoc:alloy:inputHidden:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputHidden:validatorMessage] attribute.
+alloy-inputhidden-immediate=When the [vdldoc:alloy:inputHidden:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
+alloy-inputhidden-conversion=The [vdldoc:alloy:inputHidden:value] attribute can be *converted* via the [vdldoc:alloy:inputHidden:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputHidden:converterMessage] attribute.
+alloy-inputhidden-general=The [vdldoc:alloy:inputHidden:value] attribute can be *bound to a model bean property* via EL.
+alloy-inputsecret=[javadoc:com.liferay.faces.alloy.component.inputsecretarea.InputSecret] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML input element of type *password*. Since it extends [javadoc:javax.faces.component.html.HtmlInputSecret], it supports all the features of [vdldoc:h:inputSecret].
+alloy-inputsecret-general=The [vdldoc:alloy:inputSecret:value] attribute can be *bound to a model bean property* via EL.
+alloy-inputsecret-immediate=When the [vdldoc:alloy:inputSecret:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
+alloy-inputsecret-redisplay=The [vdldoc:alloy:inputSecret:redisplay] attribute could be used to render any value that exists for the component.  This is insecure. So instead, just use the power of the [vdldoc:f:ajax:render] attribute to avoid any *redisplay* of the [vdldoc:alloy:inputSecret].
+alloy-inputsecret-redisplay-example-1=This is the default, where [vdldoc:alloy:inputSecret:redisplay] is false.  This is more secure.  Inspect the *value* of this input element after submitting here, and you will *NOT* see your secret.
+alloy-inputsecret-redisplay-example-2=Here [vdldoc:alloy:inputSecret:redisplay] is true. This is an insecure way of redisplaying a secret. Inspect the *value* of the input element after submitting here, and you will see your secret in plain text. Do not do this. You have been warned.
+alloy-inputsecret-validation=The [vdldoc:alloy:inputSecret:value] attribute can be *validated* via the [vdldoc:alloy:inputSecret:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputSecret:validatorMessage] attribute.
 alloy-inputsourcecode=[javadoc:com.liferay.faces.alloy.component.aceeditor.InputSourceCode] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
 alloy-inputsourcecode-default-value=A *default value* can specified using when the [vdldoc:alloy:inputSourceCode:value] attribute is bound via EL to a model bean property. In the example below, the default value of the `sourceText` property is set inside of the `InputSourceCodeModelBean.getSourceText()` method.
 alloy-inputsourcecode-general=The component supports *color-coded text* for various programming languages via the [vdldoc:alloy:inputSourceCode:mode] attribute.
@@ -58,7 +70,7 @@ alloy-inputtext=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTe
 alloy-inputtext-conversion=The [vdldoc:alloy:inputText:value] attribute can be *converted* via the [vdldoc:alloy:inputText:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:converterMessage] attribute.
 alloy-inputtext-general=The [vdldoc:alloy:inputText:value] attribute can be *bound to a model bean property* via EL.
 alloy-inputtext-immediate=When the [vdldoc:alloy:inputText:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
-alloy-inputtext-validation=The [vdldoc:alloy:inputText:value] attribute can be *validated* via the [vdldoc:alloy:inputText:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:validatorMessage] attribute.
+alloy-inputtext-validation=The [vdldoc:alloy:inputText:value] attribute can be *validated* via the [vdldoc:alloy:inputText:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:validatorMessage] attribute.
 alloy-inputtextarea=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTextarea] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing *multi-line text*. Since it extends [javadoc:javax.faces.component.html.HtmlInputTextarea], it supports all the features of [vdldoc:h:inputTextarea].
 alloy-inputtextarea-conversion=The [vdldoc:alloy:inputTextarea:value] attribute can be *converted* via the [vdldoc:alloy:inputTextarea:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:converterMessage] attribute.
 alloy-inputtextarea-general=The [vdldoc:alloy:inputTextarea:value] attribute can be *bound to a model bean property* via EL.
@@ -67,7 +79,7 @@ alloy-inputtextarea-right-to-left=The component supports *Right-To-Left* languag
 alloy-inputtextarea-size=The *size* of the rendered textarea can be specified via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes, or via CSS using the [vdldoc:alloy:inputTextarea:styleClass] or [vdldoc:alloy:inputTextarea:style] attributes.
 alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
-alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
+alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
 alloy-message=[javadoc:com.liferay.faces.alloy.component.message.Message] is a [javadoc:javax.faces.component.UIMessage] component that renders a `&lt;span&gt;` element containing the text of a single [javadoc:javax.faces.application.FacesMessage] for an associated component. Since it extends [javadoc:javax.faces.component.html.HtmlMessage], it supports all the features of [vdldoc:h:message].
 alloy-message-general=The component can be *associated* with an input component like [vdldoc:alloy:inputText] via the [vdldoc:alloy:message:for] attribute. If it is a child of [vdldoc:alloy:field] then it will be *automatically styled* when validation fails.
 alloy-message-general-example-1=Re-rendering [vdldoc:alloy:message] via [vdldoc:f:ajax]
@@ -202,6 +214,7 @@ conversion=Conversion
 conversion-to-a-date-using-converter-attribute=Conversion to a [javadoc:java.util.Date] using the [vdldoc:alloy:inputTextarea:converter] attribute
 conversion-to-a-date-using-f-convertdatetime=Conversion to a [javadoc:java.util.Date] using an [vdldoc:f:convertDateTime] child tag
 converter-message=Failed to convert this field
+copy-into-the-hidden-input=Copy into the hidden input
 country=Country
 customers=Customers
 data-model=Data Model
@@ -259,6 +272,7 @@ portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in ord
 position-mouse-cursor-here=Position mouse cursor here
 primary=Primary
 rating=Rating
+redisplay=Redisplay
 rendered=Rendered
 required=Required
 required-message=This is a required field
